# llm-code-explainer

./: .env.example  .gitignore  CLAUDE.md  LICENSE  Makefile  PROJECT_STRUCTURE_CHANGES.md  Plan.md  README.md  code-analyzer.py  language_config.py  llm_manager.py  main.py  pyproject.toml  tree_sitter_parser.py
code_analyzer/: analyzer.py
code_analyzer/tests/: test_code_analyzer.py
examples/: basic_usage.py  project_structure_analysis.py
src/: analyzer.py  language_config.py  llm_manager.py  tree_sitter_parser.py
tests/: conftest.py  test_code_analyzer.py
